--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: Build-only (non-régression)
+
 on:
   push:
     branches: [ main ]
@@ -6,25 +7,31 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted       
-    timeout-minutes: 15       
+    runs-on:           
+      - self-hosted
+      - Windows
+      - X64             
+    timeout-minutes: 15
+
+    defaults:
+      run:
+        shell: cmd      
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Build Win64 Release
-        run: >
-          "C:\Program Files (x86)\MSBuild\Current\Bin\MSBuild.exe"
-          OpenAITest.dproj
-          /p:Config=Release
-          /p:Platform=Win64
+        run: |
+          "C:\Program Files (x86)\MSBuild\Current\Bin\MSBuild.exe" ^
+          OpenAITest.dproj ^
+          /p:Config=Release ^
+          /p:Platform=Win64 ^
           /m
 
       - name: Build Win32 Debug
-        run: >
-          "C:\Program Files (x86)\MSBuild\Current\Bin\MSBuild.exe"
-          OpenAITest.dproj
-          /p:Config=Debug
-          /p:Platform=Win32
+        run: |
+          "C:\Program Files (x86)\MSBuild\Current\Bin\MSBuild.exe" ^
+          OpenAITest.dproj ^
+          /p:Config=Debug ^
+          /p:Platform=Win32 ^
           /m
