--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Affiche le runner pour debug
-        run: echo Running on %COMPUTERNAME%
+        run: echo Running on S7700
 
       - name: Build Win64 Release
         run: |
