--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,3 @@
-name: DelphiGenAI – CI
-
 on:
   push:
     branches: [ main ]
@@ -17,7 +15,5 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Compilation Delphi (Win64 Release)
-        shell: cmd
         run: |
-          cd D:\2026-developpement\OpenAI
-          call "C:\Program Files (x86)\Embarcadero\Studio\23.0\bin\rsvars.bat" dcc64.exe -B OpenAITest.dpr
+          cmd.exe /C "cd /d D:\2026-developpement\OpenAI && call \"C:\Program Files (x86)\Embarcadero\Studio\23.0\bin\rsvars.bat\" && dcc64.exe -B OpenAITest.dpr"
